# sp_vision_25

./: readme.md
configs/: standard3.yaml
io/: cboard.hpp  command.hpp
scripts/: ballistic_comparison.py  benchmark.py  onnx2trt.py  planner_comparison.py
src/: mt_standard.cpp  standard.cpp
tasks/auto_aim/: CMakeLists.txt  aimer.cpp  aimer.hpp  armor.hpp  classifier.cpp  classifier.hpp  detector.cpp  detector.hpp  shooter.cpp  shooter.hpp  solver.cpp  solver.hpp  target.cpp  target.hpp  tracker.cpp  tracker.hpp  yolo.cpp  yolo.hpp
tasks/auto_aim/multithread/: mt_detector.hpp
tasks/auto_aim/planner/: explicit_planner.hpp
tasks/auto_aim/yolos/: yolo_trt.cpp  yolo_trt.hpp  yolov5.cpp  yolov5.hpp
tests/: explicit_planner_benchmark.cpp
tools/: extended_kalman_filter.cpp  extended_kalman_filter.hpp  trajectory.cpp  trajectory.hpp
